@@ -106,6 +106,9 @@ Highlight the names of all directories.
 \fB\-\-file\-filter REGEX\fR
 Filter out any files matching a specified regular expression.
 .TP
+\fB\-\-file\-extensions\fR
+Show filename extensions only.
+.TP
 \fB\-\-user\-image\-dir DIRECTORY\fR
 Directory containing .jpg or .png images of users (eg 'Full Name.png') to use as avatars.
 .TP
