@@ -111,6 +111,7 @@ public:
     std::vector<std::string> highlight_users;
     std::vector<std::string> follow_users;
     std::vector<Regex*> file_filters;
+    bool file_extensions;
 
     GourceSettings();
 
