@@ -16,6 +16,7 @@
  * Added --stop-at-time option to stop Gource after a number of seconds.
  * Added --hide 'mouse' option.
  * Added --highlight-dirs option.
+ * Added --file-extensions to show filename extensions only.
  * Allow --file-idle-time 0 (files will never expire).
  * Allow --start-position 'random' to set a random start position.
  * --log-command VCS replaces multiple --log-command-VCS options.
